--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,38 @@
-div {
-    background-color: aquamarine;
-    font-size: 40px;
+* {
+    padding: 1px;
+    margin: 6px;
+    box-sizing: 1px;
+}
+
+body {background-color:bisque}
+
+h1, div {
+    font-size: 50px;
+    padding: 6px;
     font-weight: bold;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .odd {
-    background-color: aquamarine;
     color: black;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
+    padding: 6px;
+    margin: 16px;
 }
 
 .even {
-    background-color: aquamarine;
-    color: white;
+    color: rgb(9, 26, 57);
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+#ingr {
+    color: rgb(9, 26, 57);
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin: 5px 1px 5px 1px;
+    /*top right bottom left*/
+
 }
 
 .food {
@@ -27,11 +45,18 @@ div {
     height: 500px;
 }
 
+button {
+    margin-left: 100px;
+}
+
 .button {
-    background-color: aquamarine;
+    background-color: bisque;
+    color: brown;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 20px;
     text-align: center;
+    margin-left: 800px;
+    margin-right: -800px;
 }
 
 #button2 {
